# image-search

./: .gitignore  build.sh  env.yml  environment.yml  pyproject.toml  test_environment.yml
docker/: env.sh
docker/image_search/: Dockerfile  build.sh
docker/image_search_app/: Dockerfile  run_local.sh
docker/image_search_unit_test/: Dockerfile  test_in_docker.sh
scripts/: run_image_search.sh  setup_micromaba_env.sh
src/image_search/: ImageSearch.py  ImageSearcher.py  __init__.py  app_chatgpt_3_5.py  app_claude.py  app_gemini.py  dash_app.py  fastapi_app.py  image_helper.py  image_searcher_cli.py  st_app2.py  st_main.py  st_run.py  st_upload.py  streamlit_app.py
tests/unit/: resize_images.py  test_ImageSearcher.py  test_ImageSearcher_functional.py
